feat: filter results for zoom less than 13
